test_regress/t/t_fourstate_case_type_unsup.out
%Error-UNSUPPORTED: t/t_fourstate_case_type_unsup.v:11:5: Unsupported: case type
                                                        : ... note: In instance 't'
   11 |     case (a) inside
      |     ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
